--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/style.css" />
 
     <title>Calculadora Vanilla</title>
@@ -11,35 +17,69 @@
 
   <body>
     <div class="container">
-      <h1 class="page-title">Calculadora</h1>
-      <div class="calculator">
-        <div class="calc-display">
-          <p></p>
-          <h2>0</h2>
-        </div>
-        <ul class="btn-list">
-          <li><button type="button">AC</button></li>
-          <li><button type="button">Del</button></li>
-          <li><button type="button">%</button></li>
-          <li><button type="button" class="eq">=</button></li>
-          <li><button type="button">7</button></li>
-          <li><button type="button">8</button></li>
-          <li><button type="button">9</button></li>
-          <li><button type="button">x</button></li>
-          <li><button type="button">4</button></li>
-          <li><button type="button">5</button></li>
-          <li><button type="button">6</button></li>
-          <li><button type="button">/</button></li>
-          <li><button type="button">1</button></li>
-          <li><button type="button">2</button></li>
-          <li><button type="button">3</button></li>
-          <li><button type="button">+</button></li>
-          <li><button type="button">.</button></li>
-          <li><button type="button">0</button></li>
-          <li><button type="button">()</button></li>
-          <li><button type="button">-</button></li>
-        </ul>
+      <div class="display">
+        <p class="display__last-text"></p>
+        <p class="display__main-text">0</p>
       </div>
+      <ul class="calculator-grid">
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">C</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">Del</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">%</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">/</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">7</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">8</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">9</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">x</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">4</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">5</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">6</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">-</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">1</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">2</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">3</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">+</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">0</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn">.</button>
+        </li>
+        <li class="calculator-grid__item">
+          <button type="button" class="btn eq">=</button>
+        </li>
+      </ul>
     </div>
 
     <script src="scripts/index.js"></script>
