--- a/index.html
+++ b/index.html
@@ -19,65 +19,65 @@
     <div class="container">
       <div class="display">
         <p class="display__last-text"></p>
-        <p class="display__main-text">0</p>
+        <p class="display__main-text"></p>
       </div>
       <ul class="calculator-grid">
         <li class="calculator-grid__item">
-          <button type="button" class="btn">C</button>
+          <button type="button" class="btn clear">C</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn">Del</button>
+          <button type="button" class="btn delete">Del</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn">%</button>
+          <button type="button" class="btn expression-element">%</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn">/</button>
+          <button type="button" class="btn expression-element">/</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn">7</button>
+          <button type="button" class="btn expression-element">7</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn">8</button>
+          <button type="button" class="btn expression-element">8</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn">9</button>
+          <button type="button" class="btn expression-element">9</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn">x</button>
+          <button type="button" class="btn expression-element">x</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn">4</button>
+          <button type="button" class="btn expression-element">4</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn">5</button>
+          <button type="button" class="btn expression-element">5</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn">6</button>
+          <button type="button" class="btn expression-element">6</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn">-</button>
+          <button type="button" class="btn expression-element">-</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn">1</button>
+          <button type="button" class="btn expression-element">1</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn">2</button>
+          <button type="button" class="btn expression-element">2</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn">3</button>
+          <button type="button" class="btn expression-element">3</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn">+</button>
+          <button type="button" class="btn expression-element">+</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn">0</button>
+          <button type="button" class="btn expression-element">0</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn">.</button>
+          <button type="button" class="btn expression-element">.</button>
         </li>
         <li class="calculator-grid__item">
-          <button type="button" class="btn eq">=</button>
+          <button type="button" class="btn equal">=</button>
         </li>
       </ul>
     </div>
