--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
           <button type="button" class="btn expression-element">.</button>
         </li>
         <li class="calculator-grid__item">
+          <button type="button" class="btn cancel">CE</button>
+        </li>
+        <li class="calculator-grid__item">
           <button type="button" class="btn equal">=</button>
         </li>
       </ul>
